@@ -32,6 +32,8 @@ PIG-4333: Split BigData tests into multiple groups (rohini)
  
 BUG FIXES
 
+PIG-4368: Port local mode tests to Tez - TestLoadStoreFuncLifeCycle (daijy)
+
 PIG-4367: Port local mode tests to Tez - TestMultiQueryBasic (daijy)
 
 PIG-4339: e2e test framework assumes default exectype as mapred (rohini)
